# agentic-engineering-legal-app

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json  docker-compose.yml
.claude/: settings.local.json
.claude/skills/cerebras/: SKILL.md
backend/: db.py  main.py  prompts.py  pyproject.toml  utils.py
backend/app/: catalog.py  config.py  main.py  prompts.py  utils.py
backend/app/data/: db.py  documents.py  users.py
backend/app/models/: auth.py  chat.py  documents.py  templates.py
backend/app/routes/: auth.py  chat.py  documents.py  templates.py
backend/app/services/: auth.py  chat.py
backend/tests/: conftest.py  test_api.py  test_utils.py
docs/plans/: 2026-02-26-pdf-generation-design.md  2026-02-26-react-pdf-implementation.md
frontend/: .env.local.example  claude.md  next.config.ts  package-lock.json  package.json
frontend/src/__tests__/: aiChatTyping.test.ts  api.test.ts  chatRequest.test.ts  doc-template.test.ts  documents.test.ts  markdown.test.ts  nda-template.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: DashboardClient.tsx  page.tsx
frontend/src/components/: AiChat.tsx  DocCreator.tsx  DocPlaceholder.tsx  DocPreview.tsx  DocumentHistory.tsx  NdaCreator.tsx  NdaForm.tsx  NdaPreview.tsx  ProtectedRoute.tsx
frontend/src/lib/: api.ts  auth.ts  doc-template.ts  markdown-to-pdf.ts  markdown.ts  nda-pdf.tsx  nda-template.ts  types.ts
scripts/: start-linux.sh  start-mac.sh  start-win.sh  stop-linux.sh  stop-mac.sh  stop-win.sh
templates/: LICENSE
(+3 files in other folders)
